<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/skyintro">

    <TextView
        android:id="@+id/titleStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sofia"
        android:text="@string/titleStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="300dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@color/blue_transparent"
                android:fontFamily="@font/rosarivo"
                android:hint="@string/enterCity"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                android:textColorHint="@color/white_transparent" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search5050"
                android:id="@+id/searchBtn"
                android:background="@color/blue_transparent"
                android:layout_gravity="center"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/rosarivo"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>