<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultWeatherActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunbackground"
    tools:context=".ResultWeatherActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:src="@drawable/location_48" />

        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/rosarivo"
            android:text="Thessaloniki"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/cityName"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/backButton"
            android:src="@drawable/back"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:src="@drawable/rain"
                android:id="@+id/weatherIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/rosarivo"
                android:text="@string/rain"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                android:id="@+id/weatherWordTxt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rosarivo"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rosarivo"
                android:text="31°C"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:id="@+id/temperatureTxt"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rosarivo"
            android:text="Tuesday"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/dayTxt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rosarivo"
            android:text="21/03/2024"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/dateTxt"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_background"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="@string/minTemp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="10°C"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/minTempTxt"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="@string/maxTemp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="20°C"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/maxTempTxt"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/uv_index" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="@string/uvIndex"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="10"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/uvIndexTxt"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="6:38 am"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:id="@+id/sunriseTxt"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sunset" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rosarivo"
                    android:text="19:30 pm"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/sunsetTxt"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rosarivo"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>